[gd_scene load_steps=13 format=3 uid="uid://be2n1dbbqm6gf"]

[ext_resource type="Script" path="res://scripts/Shadow.gd" id="1_ke7iy"]
[ext_resource type="Texture2D" uid="uid://ccgpses324nob" path="res://assets/Object1_Animation/Frame 24.png" id="2_n7x1v"]
[ext_resource type="Texture2D" uid="uid://rqn1w4q77wc" path="res://assets/Object1_Animation/Frame 19.png" id="3_miqek"]
[ext_resource type="Texture2D" uid="uid://4p3i4sjj3sup" path="res://assets/Object1_Animation/Frame 20.png" id="4_kh2xd"]
[ext_resource type="Texture2D" uid="uid://cq16pmbyjeq2o" path="res://assets/Object1_Animation/Frame 21.png" id="5_o8tsm"]
[ext_resource type="Texture2D" uid="uid://cl22v1vey8gyc" path="res://assets/Object1_Animation/Frame 22.png" id="6_f4dyj"]
[ext_resource type="Texture2D" uid="uid://t7yb1t0vrp5o" path="res://assets/Object1_Animation/Frame 23.png" id="7_k46nr"]
[ext_resource type="AudioStream" uid="uid://mh2bp1q2mimx" path="res://assets/sounds/shadowFormsAudio.mp3" id="8_f2cqo"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5g8tv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_n7x1v")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_miqek")
}, {
"duration": 1.0,
"texture": ExtResource("4_kh2xd")
}, {
"duration": 1.0,
"texture": ExtResource("5_o8tsm")
}, {
"duration": 1.0,
"texture": ExtResource("6_f4dyj")
}, {
"duration": 1.0,
"texture": ExtResource("7_k46nr")
}, {
"duration": 1.0,
"texture": ExtResource("2_n7x1v")
}],
"loop": false,
"name": &"rise",
"speed": 7.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f8p31"]
size = Vector2(277.333, 54.3333)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tssgj"]
size = Vector2(151, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k7twh"]
size = Vector2(145, 49)

[node name="ObjectShadowRigidBody" type="CharacterBody2D"]
z_index = 5
position = Vector2(-4, -6)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_ke7iy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-10, -43)
scale = Vector2(0.360221, 0.360221)
sprite_frames = SubResource("SpriteFrames_5g8tv")
animation = &"rise"
frame = 5
frame_progress = 1.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(4, 6)
shape = SubResource("RectangleShape2D_f8p31")

[node name="playShadowFormSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_f2cqo")

[node name="LeftDetector" type="Area2D" parent="."]
position = Vector2(3, 5)

[node name="LeftDetectCollisionShape" type="CollisionShape2D" parent="LeftDetector"]
position = Vector2(-70, 0)
shape = SubResource("RectangleShape2D_tssgj")
debug_color = Color(0.472281, 0.568371, 0.448081, 0.42)

[node name="RightDetector" type="Area2D" parent="."]
position = Vector2(5, 2)

[node name="RightDetectCollisionShape" type="CollisionShape2D" parent="RightDetector"]
position = Vector2(79, 8)
shape = SubResource("RectangleShape2D_k7twh")
debug_color = Color(0.758351, 0.324728, 0.800418, 0.42)

[connection signal="body_entered" from="LeftDetector" to="." method="_on_left_detector_body_entered"]
[connection signal="body_exited" from="LeftDetector" to="." method="_on_left_detector_body_exited"]
[connection signal="body_entered" from="RightDetector" to="." method="_on_right_detector_body_entered"]
[connection signal="body_exited" from="RightDetector" to="." method="_on_right_detector_body_exited"]
